# Pilgrimage

./: CMakeLists.txt  README.md  hello.cc  main.cc  makefile
game/: pilgrimage.cc
include/: ccsystem.h  ccsystem.h~  component.h  iocomponent.h  system.h
sample/: sample.cc
src/: ccsystem.cpp  ccsystem.cpp~  component.cpp  iocomponent.cpp  system.cpp
